# plotfig

./: LICENSE  README.md
examples/: examples.py
examples/data/: pie.csv  plot.csv  scatter.csv
plot/: plot.py
plotfig/: .codacy.yml  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  README.rst  appveyor.yml  pyproject.toml
plotfig/.circleci/: config.yml
plotfig/conda.recipe/: meta.yaml
plotfig/plot/: axis.py  figure.py  plot.py
plotfig/src/plot/: __init__.py  __main__.py  cli.py
plotfig/tests/: test_cli.py
